--- a/docs/stylesheets/application.css
+++ b/docs/stylesheets/application.css
@@ -32,7 +32,7 @@ header {
   justify-content: center;
   background-color: midnightblue;
   color: white;
-  padding: 10px; }
+  padding: 20px; }
   header h1 {
     font-size: 42px; }
 
@@ -50,6 +50,8 @@ nav {
     overflow: scroll; }
     nav > ul > li {
       font-size: 16px; }
+      nav > ul > li:hover {
+        background-color: #ececec; }
       nav > ul > li:active {
         background-color: red; }
 
