--- a/docs/stylesheets/application.scss
+++ b/docs/stylesheets/application.scss
@@ -10,7 +10,7 @@ header {
   justify-content: center;
   background-color: midnightblue;
   color: white;
-  padding: 10px;
+  padding: 20px;
 
   h1 {
     font-size: 42px;
@@ -34,6 +34,10 @@ nav {
 
     > li {
       font-size: 16px;
+
+      &:hover {
+        background-color: $light-grey;
+      }
 
       &:active {
         background-color: red;
