Style main component

--- a/docs/stylesheets/application.css
+++ b/docs/stylesheets/application.css
@@ -41,6 +41,10 @@ body {
   font-size: 14px;
   height: 100%; }
 
+.nav-main {
+  display: flex;
+  flex-direction: row; }
+
 nav {
   display: flex;
   height: 100%; }
@@ -56,6 +60,9 @@ nav {
         background-color: red; }
 
 .protein-list {
+  padding: 20px; }
+
+main {
   padding: 20px; }
 
 /*# sourceMappingURL=application.css.map */
