--- a/docs/stylesheets/application.css
+++ b/docs/stylesheets/application.css
@@ -39,16 +39,16 @@ header {
 body {
   font-family: sans-serif;
   font-size: 14px;
-  height: 100%; }
+  margin: 80px;
+  border: 2px solid black; }
 
 .nav-main {
   display: flex;
-  flex-direction: row; }
+  flex-direction: row;
+  height: 75vh; }
 
 nav {
-  display: flex;
   height: 100%;
-  padding: 20px;
   background-color: floralwhite; }
   nav > ul {
     width: 200px;
@@ -66,7 +66,6 @@ nav {
 main {
   padding: 20px;
   flex: 3;
-  max-width: 100vw;
   background-color: azure; }
   main .protein-view {
     padding: 20px; }
