--- a/docs/stylesheets/variables.scss
+++ b/docs/stylesheets/variables.scss
@@ -1,4 +1,9 @@
-$red: #d43316;
-$black: #161616;
-$grey: #747474;
+// $red: #d43316;
+// $black: #161616;
+// $grey: #747474;
+
 $light-grey: #ececec;
+$grey: #5D5F71;
+$yellow: #FFDD4A;
+$orange: #FE9000;
+$cream: #EDEBD7;
