--- a/docs/stylesheets/application.scss
+++ b/docs/stylesheets/application.scss
@@ -3,82 +3,81 @@
 
 html {
   height: 100%;
-}
 
-header {
-  display: flex;
-  justify-content: center;
-  background-color: $grey;
-  color: white;
-  padding: 20px;
+  header {
+    display: flex;
+    justify-content: center;
+    background-color: $grey;
+    color: white;
+    padding: 20px;
 
-  h1 {
-    font-size: 42px;
+    h1 {
+      font-size: 42px;
+    }
+  }
+
+  body {
+    font-family: sans-serif;
+    font-size: 16px;
+    margin: 80px;
+    border: 2px solid $grey;
+    min-width: 450px
+    // height: 100%;
   }
 }
 
-body {
-  font-family: sans-serif;
-  font-size: 16px;
-  margin: 80px;
-  border: 2px solid $grey;
-  // height: 100%;
-}
 
 .nav-main {
   display: flex;
   flex-direction: row;
   height: 75vh;
-}
 
-nav {
-  // display: flex;
-  height: 100%;
-  background-color: $yellow;
-  // border: 1px solid midnightblue;
+  nav {
+    // display: flex;
+    height: 100%;
+    background-color: $yellow;
+    // border: 1px solid midnightblue;
 
-  > ul {
-    // background-color: white;
-    width: 200px;
-    overflow: scroll;
+    > ul {
+      // background-color: white;
+      width: 200px;
+      overflow: scroll;
 
-    > li {
-      font-size: 16px;
+      > li.protein-list {
+        font-size: 16px;
+        padding: 30px;
 
-      &:hover {
-        background-color: $light-grey;
-        cursor: pointer;
-      }
+        &:hover {
+          background-color: $light-grey;
+          cursor: pointer;
+        }
 
-      &:active {
-        background-color: $orange;
+        &:active {
+          background-color: $orange;
+        }
       }
     }
   }
 
-}
+  main {
+    padding: 30px;
+    flex: 3;
+    background-color: azure;
+    // border: 1px solid midnightblue;
 
-.protein-list {
-  padding: 30px;
-}
+    .protein-view {
+      // padding: 20px;
+      p {
+        padding-bottom: 10px;
+      }
 
-main {
-  padding: 30px;
-  flex: 3;
-  background-color: azure;
-  // border: 1px solid midnightblue;
-
-  .protein-view {
-    // padding: 20px;
-    p {
-      padding-bottom: 10px;
-    }
-
-    textarea {
-      width: 95%;
-      height: 200px;
-      resize: none;
-      padding: 10px;
+      textarea {
+        width: 95%;
+        height: 200px;
+        resize: none;
+        padding: 10px;
+      }
     }
   }
+
 }
