--- a/docs/stylesheets/application.css
+++ b/docs/stylesheets/application.css
@@ -24,6 +24,10 @@ body {
 ol, ul {
   list-style: none; }
 
+a {
+  text-decoration: none;
+  color: inherit; }
+
 html {
   height: 100%; }
   html header {
@@ -37,13 +41,23 @@ html {
   html body {
     font-family: sans-serif;
     font-size: 16px;
-    margin: 80px;
-    border: 2px solid #5D5F71;
+    margin: 80px 80px 20px 80px;
     min-width: 450px; }
+  html .footer {
+    padding-top: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 14px; }
+    html .footer a {
+      font-weight: bold; }
+    html .footer p {
+      padding-top: 5px; }
 
 .nav-main {
   display: flex;
-  flex-direction: row; }
+  flex-direction: row;
+  border: 2px solid #5D5F71; }
   .nav-main nav {
     height: 100%;
     background-color: #FFDD4A; }
