--- a/docs/stylesheets/application.scss
+++ b/docs/stylesheets/application.scss
@@ -92,6 +92,12 @@ html {
 
     .protein-view {
       // padding: 20px;
+      h4 {
+        font-size: 18px;
+        font-weight: bold;
+        padding-bottom: 20px;
+      }
+
       p {
         padding-bottom: 10px;
       }
